<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFB7C9"
    tools:context="com.sid.locationtracker.SendLocationSMSActivity" >

    <!-- Label to enter phone number -->
    <TextView
        android:id="@+id/phone_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_no_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- EditText to enter phone number -->
    <EditText
        android:id="@+id/phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_no_hint"
        android:layout_marginBottom="15dp" >

        <requestFocus />
    </EditText>

    <!-- Label to display location -->
    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- To display the location -->
    <TextView
        android:id="@+id/display_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#ffffff" />

    <!-- Button to Send SMS -->
    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_btn"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:onClick="sendSMS" />

</LinearLayout>
